# Algoscope

./: .gitignore  .gitignore_1  Dockerfile  Makefile_1  README.md  README_8.md  README_HF.md  ci.yml  dashboard.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_graph.html  test_pipeline.py
.github/workflows/: ci.yml  hf-deploy.yml
app/: database.py  graph.py  ingestion.py  main.py  model.py
assets/: graph
frontend/: .env.development  .env.production  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/app/: App.tsx
frontend/src/app/components/: CoOccurrenceGraph.tsx  ExportTab.tsx  Header.tsx  OverviewTab.tsx  Sidebar.tsx  SplashScreen.tsx  TermComparisonTab.tsx  mockData.ts
frontend/src/imports/pasted_text/: algo-scope-dashboard.txt  bluesky-ingest.txt  graph-utils.txt  toxicity-classifier.txt
test/: test_core.py
tests/: test_core.py  test_dashboard.py  test_pipeline.py
